feat(deploy): added initial configuration to deploy app